resources/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-node-service
spec:
  selector:
    app: my-node-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
